# daily-log

./: Cargo.toml
src/: config.rs  log.rs  main.rs
